# ResearchCar

install/: local_setup.sh  setup.sh
install/diff_drive_robot/share/diff_drive_robot/: package.sh
install/diff_drive_robot/share/diff_drive_robot/launch/: spawn_robot.launch.py
install/diff_drive_robot/share/diff_drive_robot/urdf/: robot.urdf.xacro
install/diff_drive_robot/share/diff_drive_robot/worlds/: empty_world.sdf
log/: latest_build
src/diff_drive_robot/: CMakeLists.txt  package.xml
src/diff_drive_robot/launch/: spawn_robot.launch.py
src/diff_drive_robot/urdf/: robot.urdf.xacro
